--- a/config.env
+++ b/config.env
@@ -1,14 +1,13 @@
 NODE_ENV=development
-PORT=3000
-DATABASE=mongodb+srv://jonas:<PASSWORD>@cluster0-pwikv.mongodb.net/natours?retryWrites=true
-DATABASE_LOCAL=mongodb://localhost:27017/natours
-DATABASE_PASSWORD=On0adDgBCE5ECWh6
+PORT=5000
+DATABASE=mongodb+srv://ahmadhanafi:<password>@bookstore.as54kvo.mongodb.net/?retryWrites=true&w=majority
+DATABASE_PASSWORD=Melad12345
 
-JWT_SECRET=my-ultra-secure-and-ultra-long-secret
-JWT_EXPIRES_IN=90d
-JWT_COOKIE_EXPIRES_IN=90
+JWT_SECRET=kjqfqinpqievunqeinvqnkejwhueqpqwinpqwlkwqf
+JWT_EXPIRES_IN=10d
+JWT_COOKIE_EXPIRES_IN=10
 
-EMAIL_USERNAME=a124458539192a
-EMAIL_PASSWORD=1e3caf48074eba
-EMAIL_HOST=smtp.mailtrap.io
+EMAIL_USERNAME=06cb682e327255
+EMAIL_PASSWORD=5212b15bd5bc98
+EMAIL_HOST=sandbox.smtp.mailtrap.io
 EMAIL_PORT=25
