--- a/config.env
+++ b/config.env
@@ -1,8 +1,6 @@
 NODE_ENV=development
 PORT=5000
-DATABASE=mongodb+srv://ahmadhanafi:<password>@bookstore.as54kvo.mongodb.net/?retryWrites=true&w=majority
-DATABASE_PASSWORD=Melad12345
-
+DATABASE=mongodb+srv://ahmad:weGxHWTj881Kz4Zx@bookstore.as54kvo.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET=kjqfqinpqievunqeinvqnkejwhueqpqwinpqwlkwqf
 JWT_EXPIRES_IN=10d
 JWT_COOKIE_EXPIRES_IN=10
