--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "natours",
+  "name": "bookstore",
   "version": "1.0.0",
   "description": "Learning node, express and mongoDB",
   "main": "app.js",
@@ -14,16 +14,16 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.2",
+    "morgan": "^1.9.1",
+    "slugify": "^1.6.6",
+    "validator": "^13.11.0",
     "express-mongo-sanitize": "^1.3.2",
     "express-rate-limit": "^3.5.0",
     "helmet": "^3.16.0",
     "hpp": "^0.2.2",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.5.2",
-    "morgan": "^1.9.1",
     "nodemailer": "^6.1.1",
-    "slugify": "^1.3.4",
-    "validator": "^10.11.0",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
