book functionality and stuff

--- a/config.env
+++ b/config.env
@@ -9,3 +9,5 @@ EMAIL_USERNAME=06cb682e327255
 EMAIL_PASSWORD=5212b15bd5bc98
 EMAIL_HOST=sandbox.smtp.mailtrap.io
 EMAIL_PORT=465
+
+OPENAI_API_KEY=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
