--- a/package.json
+++ b/package.json
@@ -12,18 +12,19 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.1",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.2",
-    "morgan": "^1.9.1",
-    "slugify": "^1.6.6",
-    "validator": "^13.11.0",
     "express-mongo-sanitize": "^1.3.2",
     "express-rate-limit": "^3.5.0",
     "helmet": "^3.16.0",
     "hpp": "^0.2.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.2",
+    "morgan": "^1.9.1",
     "nodemailer": "^6.1.1",
+    "slugify": "^1.6.6",
+    "validator": "^13.11.0",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
